# FRC-Claude-Fable-Scouting

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml  rubric.json
src/frcscout/: __init__.py  cli.py  config.py  pipeline.py  report.py
src/frcscout/aggregate/: __init__.py  export.py  records.py
src/frcscout/dataset/: __init__.py  miner.py  synth.py
src/frcscout/events/: __init__.py  engine.py  model.py  vlm.py
src/frcscout/field/: __init__.py  autozones.py  homography.py  zones.py
src/frcscout/identify/: __init__.py  assignment.py  bumper_ocr.py
src/frcscout/ingest/: __init__.py  errors.py  frames.py  source.py
src/frcscout/integrations/: __init__.py  galaxia.py  statbotics.py
src/frcscout/overlay/: __init__.py  autodetect.py  ocr.py  parse.py  regions.py  timeline.py
src/frcscout/rubric/: __init__.py  build.py  extract.py  fetch.py  model.py  patterns.py  seed.py
src/frcscout/schedule/: __init__.py  errors.py  fetch.py  frc_events.py  matchkey.py  model.py  nexus.py  tba.py
src/frcscout/ui/: app.py  jobs.py  wsgi.py
src/frcscout/ui/static/: job.js  match.js  style.css
src/frcscout/ui/templates/: base.html  index.html  job.html  match.html
src/frcscout/vision/: __init__.py  color_detector.py  debug.py  detections.py  tracker.py  yolo_detector.py
tests/: conftest.py  test_aggregate.py  test_autodetect.py  test_build.py  test_config.py  test_dataset.py  test_deploy.py  test_events.py  test_field.py  test_identify.py  test_ingest.py  test_integrations.py  test_matchkey.py  test_model.py  test_overlay.py  test_overlay_e2e.py  test_patterns.py  test_pipeline_e2e.py  test_pipeline_extras.py  test_pipeline_unit.py  test_real_footage_hardening.py  test_report.py  test_schedule_fetch.py  test_schedule_providers.py  test_synth.py  test_ui.py  test_vision.py
tests/fixtures/: manual_excerpt.txt
